[tool.poetry]
name = "mongodb-flask"
version = "0.1.0"
description = ""
authors = ["SkandaPrasad-S <skandaprasad98@gmail.com>"]
readme = "README.md"
packages = [{include = "mongodb_flask"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.0.0"
pymongo = "^4.3.3"
flask-restx = "^1.1"
flask-bcrypt = "^1.0"
pytest = "^7.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
